# TradeRoom.ai

./: .env.example  .gitignore  INTEGRATION_SUMMARY.md  Readme.md  package-lock.json  rules.md
backend/: Cargo.toml  Dockerfile  README.md  db_logs.txt  db_logs2.txt  errors.txt  lib.rs  package-lock.json  package.json  publish_errors.txt
backend/data_poller/: Cargo.toml
backend/data_poller/src/: context_refresh.rs  live_stream.rs  main.rs  market_hours.rs  spacetime_client.rs
backend/scripts/: api-server.mjs  publish-cloud.ps1  publish-cloud.sh
backend/src/: lib.rs
backend/src/common/: constants.rs  time.rs
backend/src/integrations/: gemini.rs  mem0.rs  mod.rs
backend/src/procedures/: cro.rs  cycle.rs  memory_web.rs  mod.rs  pattern.rs  pm.rs  quant.rs
backend/src/reducers/: execution.rs  ingest.rs  init.rs  launch.rs  market.rs  messages.rs  mod.rs  outcome.rs
backend/src/schema/: accessors.rs  agent.rs  context.rs  logs.rs  market.rs  market_data.rs  memory.rs  messages.rs  mod.rs  risk.rs  schedule.rs  trade.rs
backend/src/tests/: cycle_tests.rs  gating_tests.rs  mod.rs
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css  styles.css
frontend/src/components/: Dashboard.jsx  HowItWorks.jsx  Navbar.jsx  Solution.jsx
src/: App.jsx  index.css
src/components/: CTA.jsx  Dashboard.jsx  Footer.jsx  Hero.jsx  Navbar.jsx  Problem.jsx  StatusBar.jsx  TechStack.jsx
