[package]
name = "traderoom"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
spacetimedb = { version = "2.1", features = ["unstable"] }

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
