[package]
name = "traderoom-data-poller"
version = "0.1.0"
edition = "2021"

[dependencies]
yfinance-rs = { version = "0.7.2", features = ["tracing"] }
tokio = { version = "1", features = ["full"] }
spacetimedb-sdk = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenv = "0.15"
thiserror = "2"
chrono = "0.4"
